--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.0",
     "expo": "~46.0.16",
+    "expo-cli": "^6.0.6",
     "expo-status-bar": "~1.4.0",
     "graphql": "^15.8.0",
     "react": "18.0.0",
