--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-material-menu": "^2.0.0",
     "react-navigation": "^4.4.4",
     "react-navigation-header-buttons": "^10.0.0",
     "react-navigation-stack": "^2.10.4"
