--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.1",
     "expo": "~46.0.16",
     "expo-cli": "^6.0.6",
+    "expo-secure-store": "^11.3.0",
     "expo-status-bar": "~1.4.0",
     "graphql": "^15.8.0",
     "react": "18.0.0",
